--- a/Project/src/main/resources/login_main.fxml
+++ b/Project/src/main/resources/login_main.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerLM">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@background.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerLM">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/background.css">
+      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="background.css">
          <children>
             <ImageView pickOnBounds="true" preserveRatio="true">
                <image>
@@ -27,9 +27,9 @@
                   <Blend />
                </effect>
                <top>
-                  <JFXTabPane prefHeight="400.0" prefWidth="600.0" stylesheets="@background.css" BorderPane.alignment="CENTER">
+                  <JFXTabPane fx:id="login_tabpane" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <tabs>
-                        <Tab text="Guest">
+                        <Tab fx:id="guest_tab" text="Guest">
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
@@ -43,7 +43,7 @@
                                           <Font name="System Bold Italic" size="14.0" />
                                        </font>
                                     </JFXButton>
-                                    <JFXButton fx:id="loginAsGuestButton1" layoutX="280.0" layoutY="267.0" text="Login">
+                                    <JFXButton fx:id="loginAsGuestButton1" layoutX="280.0" layoutY="267.0" onMouseClicked="#goToUserTab" text="Login">
                                        <font>
                                           <Font name="System Bold Italic" size="14.0" />
                                        </font>
@@ -51,7 +51,7 @@
                                  </children></AnchorPane>
                           </content>
                         </Tab>
-                        <Tab text="User">
+                        <Tab fx:id="user_tab" text="User">
                            <content>
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
@@ -76,13 +76,13 @@
                               </AnchorPane>
                            </content>
                         </Tab>
-                        <Tab text="Administrator">
+                        <Tab fx:id="admin_tab" text="Administrator">
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <JFXTextField layoutX="200.0" layoutY="107.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" />
                                     <JFXPasswordField layoutX="200.0" layoutY="188.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" />
-                                    <JFXButton fx:id="loginAsAdminButton" layoutX="270.0" layoutY="249.0" stylesheets="@background.css" text="Login" textAlignment="CENTER">
+                                    <JFXButton fx:id="loginAsAdminButton" layoutX="270.0" layoutY="249.0" text="Login" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="15.0" />
                                        </font>
