--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXSlider?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -21,7 +24,6 @@
 <?import javafx.scene.shape.Path?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <StackPane fx:id="parentPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFM">
      <children>
@@ -40,10 +42,10 @@
              <HBox fx:id="hboxForMap" fillHeight="true" VBox.vgrow="ALWAYS">
             <GridPane fx:id="interfaceGrid" minWidth="200.0" prefWidth="200.0" HBox.hgrow="NEVER">
                <columnConstraints>
-                  <ColumnConstraints hgrow="ALWAYS" fillWidth="true" minWidth="200.0" />
+                  <ColumnConstraints fillWidth="true" hgrow="ALWAYS" minWidth="200.0" />
                </columnConstraints>
                <rowConstraints>
-                  <RowConstraints percentHeight="5.0" vgrow="ALWAYS"  />
+                  <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
                   <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
                   <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
                   <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
@@ -59,13 +61,13 @@
                                  <Font name="System Bold Italic" size="16.0" />
                              </font>
                          </Text>
-                         <ChoiceBox fx:id="initialLocationSelect" onAction="#initLocChanged" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+                         <ChoiceBox fx:id="destinationSelect" onAction="#destLocChanged" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
                          <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Destination" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                              <font>
                                  <Font name="System Bold Italic" size="16.0" />
                              </font>
                          </Text>
-                         <ChoiceBox fx:id="destinationSelect" onAction="#destLocChanged" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                         <ChoiceBox fx:id="initialLocationSelect" onAction="#initLocChanged" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
                          <JFXButton onAction="#clearSelection" prefWidth="100.0" styleClass="jfx-button-login" stylesheets="@background.css" text="Cancel" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
                              <font>
                                  <Font name="System Bold" size="14.0" />
@@ -76,19 +78,76 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXToggleButton>
+                  <JFXButton fx:id="directionsRequest" onAction="#directionSelection" prefHeight="88.0" prefWidth="177.0" styleClass="jfx-button-login" stylesheets="@background.css" text="Do you want directions?" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </GridPane>
             <StackPane HBox.hgrow="ALWAYS">
                <children>
                        <ScrollPane fx:id="scrollPane_pathfind">
-                           <AnchorPane fx:id="scroll_AnchorPane" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
-                               <ImageView fx:id="map_imageView" preserveRatio="true">
-                                   <Image url="@02_thesecondfloor.png" />
-                               </ImageView>
-                               <Path fx:id="path" />
+                            <StackPane alignment="TOP_LEFT">
+                                <children>
+                           <AnchorPane fx:id="pane_002" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+                              <children>
+                                          <ImageView fx:id="map_002" opacity="0.0" preserveRatio="true">
+                                              <Image url="@maps/00_thelowerlevel2.png" />
+                                          </ImageView>
+                                          <Path fx:id="p_002" />
+                              </children>
                            </AnchorPane>
+                           <AnchorPane fx:id="pane_001" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+                              <children>
+                                          <ImageView fx:id="map_001" opacity="0.0" preserveRatio="true">
+                                              <Image url="@maps/00_thelowerlevel1.png" />
+                                          </ImageView>
+                                          <Path fx:id="p_001" />
+                              </children>
+                           </AnchorPane>
+                           <AnchorPane fx:id="pane_00" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+                              <children>
+                                          <ImageView fx:id="map_00" opacity="0.0" preserveRatio="true">
+                                              <Image url="@maps/00_thegroundfloor.png" />
+                                          </ImageView>
+                                          <Path fx:id="p_00" />
+                              </children>
+                           </AnchorPane>
+                           <AnchorPane fx:id="pane_01" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+                              <children>
+                                          <ImageView fx:id="map_01" opacity="0.0" preserveRatio="true">
+                                              <Image url="@maps/01_thefirstfloor.png" />
+                                          </ImageView>
+                                          <Path fx:id="p_01" />
+                              </children>
+                           </AnchorPane>
+                           <AnchorPane fx:id="pane_02" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+                              <children>
+                                          <ImageView fx:id="map_02" opacity="0.0" preserveRatio="true">
+                                              <Image url="@maps/02_thesecondfloor.png" />
+                                          </ImageView>
+                                          <Path fx:id="p_02" />
+                              </children>
+                           </AnchorPane>
+                           <AnchorPane fx:id="pane_03" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+                              <children>
+                                          <ImageView fx:id="map_03" opacity="0.0" preserveRatio="true">
+                                              <Image url="@maps/03_thethirdfloor.png" />
+                                          </ImageView>
+                                          <Path fx:id="p_03" />
+                              </children>
+                           </AnchorPane>
+                                </children>
+                            </StackPane>
                        </ScrollPane>
-                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="140.0" prefWidth="75.0" StackPane.alignment="TOP_LEFT">
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" StackPane.alignment="TOP_CENTER">
+                     <children>
+                        <Label fx:id="floorLabel" styleClass="titleLabel" stylesheets="background.css" layoutY="14.0" text="Floor Label">
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="75.0" StackPane.alignment="TOP_LEFT">
                      <children>
                         <JFXButton fx:id="zoom_button" contentDisplay="CENTER" layoutX="4.0" layoutY="14.0" mnemonicParsing="false" onAction="#zoom" prefWidth="100.0" styleClass="jfx-button-zoom" stylesheets="@background.css" text=" " textFill="WHITE">
                            <font>
@@ -97,7 +156,7 @@
                            <graphic>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/zoom-in%20(1).png" />
+                                    <Image url="@icon/zoom-in (1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -109,15 +168,14 @@
                            <graphic>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/zoom-out%20(1).png" />
+                                    <Image url="@icon/zoom-out (1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXSlider fx:id="floorSlider" styleClass="floor-slider" stylesheets="background.css" layoutX="20.0" layoutY="150.0" max="6.0" prefHeight="150.0" prefWidth="10.0" showTickMarks="true" snapToTicks="true" AnchorPane.leftAnchor="20.0">
+                           </JFXSlider>
                      </children>
-                     <StackPane.margin>
-                        <Insets left="10.0" />
-                     </StackPane.margin>
                   </AnchorPane>
                </children>
             </StackPane>
