--- a/Project/src/main/resources/admintools/ATMV_selectedNodeOptions_popup.fxml
+++ b/Project/src/main/resources/admintools/ATMV_selectedNodeOptions_popup.fxml
@@ -11,21 +11,22 @@
    <children>
       <GridPane alignment="CENTER" prefHeight="0.0" prefWidth="600.0" StackPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" prefWidth="100.0" />
+            <ColumnConstraints />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="button_cancel" prefHeight="79.0" prefWidth="217.0" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Cancel" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <JFXButton fx:id="button_editNode" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Edit Node" textAlignment="CENTER" />
-            <JFXButton fx:id="button_setKioskLocation" layoutX="1.0" prefHeight="37.0" prefWidth="181.0" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Set as Kiosk" textAlignment="CENTER" GridPane.columnIndex="2" />
-            <JFXButton fx:id="button_addEdge" prefHeight="72.0" prefWidth="227.0" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Add Edge" textAlignment="CENTER" GridPane.rowIndex="1" />
-            <JFXButton fx:id="button_deleteNode" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Delete Node" textAlignment="CENTER" GridPane.columnIndex="1" />
-            <JFXButton fx:id="button_deleteEdge" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Delete Edge" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <JFXButton fx:id="button_cancel" onMouseClicked="#closeWindow" prefHeight="79.0" prefWidth="217.0" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Cancel" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <JFXButton fx:id="button_editNode" onMouseClicked="#editNode" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Edit Node" textAlignment="CENTER" />
+            <JFXButton fx:id="button_setKioskLocation" layoutX="1.0" onMouseClicked="#setKiosk" prefHeight="37.0" prefWidth="181.0" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Set as Kiosk" textAlignment="CENTER" GridPane.columnIndex="2" />
+            <JFXButton fx:id="button_addEdge" onMouseClicked="#addEdge" prefHeight="72.0" prefWidth="227.0" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Add Edge" textAlignment="CENTER" GridPane.rowIndex="1" />
+            <JFXButton fx:id="button_deleteNode" onMouseClicked="#deleteNode" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Delete Node" textAlignment="CENTER" GridPane.columnIndex="1" />
+            <JFXButton fx:id="button_deleteEdge" onMouseClicked="#deleteEdge" scaleX="1.5" scaleY="1.5" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="Delete Edge" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
          <StackPane.margin>
             <Insets />
