--- a/Project/src/main/resources/application/login_main.fxml
+++ b/Project/src/main/resources/application/login_main.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
@@ -32,99 +33,111 @@
                <tabs>
                   <Tab fx:id="user_tab" style="-fx-text-fill: #090a0f;" text="User">
                      <content>
-                        <GridPane>
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="ALWAYS" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="ALWAYS" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints vgrow="ALWAYS" />
-                           </rowConstraints>
+                        <GridPane alignment="CENTER" prefHeight="690.0" prefWidth="1280.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
                            <children>
-                              <JFXTextField fx:id="userUsernameTextField" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-                              <JFXPasswordField fx:id="userPasswordTextField" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Username" GridPane.halignment="CENTER" GridPane.rowIndex="4">
-                                 <font>
-                                    <Font size="25.0" />
-                                 </font>
-                              </Text>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.halignment="CENTER" GridPane.rowIndex="6">
-                                 <font>
-                                    <Font size="25.0" />
-                                 </font>
-                              </Text>
-                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, User" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../pictures/BWH.JPG" />
+                                 </image>
+                              </ImageView>
+                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, User!" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                                  <font>
                                     <Font name="System Bold Italic" size="48.0" />
                                  </font>
+                                 <cursor>
+                                    <Cursor fx:constant="DEFAULT" />
+                                 </cursor>
                               </Text>
-                              <JFXButton fx:id="loginAsUserButton" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
-                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.rowIndex="1">
-                                 <image>
-                                    <Image url="@../images/BWH.JPG" />
-                                 </image>
-                              </ImageView>
+                              <JFXTextField fx:id="adminUsernameTextField1" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <JFXPasswordField fx:id="adminPasswordTextField1" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Username" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <JFXButton fx:id="loginAsAdminButton1" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+                                 <font>
+                                    <Font name="System Bold" size="15.0" />
+                                 </font>
+                              </JFXButton>
                            </children>
                         </GridPane>
                      </content>
                   </Tab>
                   <Tab fx:id="admin_tab" text="Administrator">
-                    <content>
-                        <GridPane>
+                     <content>
+                        <GridPane alignment="CENTER">
                            <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                            </columnConstraints>
                            <rowConstraints>
-                              <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="ALWAYS" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="ALWAYS" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
-                              <RowConstraints vgrow="ALWAYS" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <JFXTextField fx:id="adminUsernameTextField" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-                              <JFXPasswordField fx:id="adminPasswordTextField" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
-                              <JFXButton fx:id="loginAsAdminButton" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="8">
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../pictures/BWH.JPG" />
+                                 </image>
+                              </ImageView>
+                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, Administrator!" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                 <font>
+                                    <Font name="System Bold Italic" size="48.0" />
+                                 </font>
+                                 <cursor>
+                                    <Cursor fx:constant="DEFAULT" />
+                                 </cursor>
+                              </Text>
+                              <JFXTextField fx:id="adminUsernameTextField11" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <JFXPasswordField fx:id="adminPasswordTextField11" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" stylesheets="/css/controlsGridpane.css" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Administrator's Username" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Text>
+                              <JFXButton fx:id="loginAsAdminButton11" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </JFXButton>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Administrator's Username" GridPane.halignment="CENTER" GridPane.rowIndex="4">
-                                 <font>
-                                    <Font size="25.0" />
-                                 </font>
-                              </Text>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.halignment="CENTER" GridPane.rowIndex="6">
-                                 <font>
-                                    <Font size="25.0" />
-                                 </font>
-                              </Text>
-                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, Administrator" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-                                 <font>
-                                    <Font name="System Bold Italic" size="48.0" />
-                                 </font>
-                              </Text>
-                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.rowIndex="1">
-                                 <image>
-                                    <Image url="@../images/BWH.JPG" />
-                                 </image>
-                              </ImageView>
                            </children>
                         </GridPane>
-                    </content>
+                     </content>
                   </Tab>
                </tabs>
             </JFXTabPane>
